# Scarabble

./: CMakeLists.txt  HumanMode.cpp  Scarabble.vcxproj  Scarabble.vcxproj.filters  commToImp.h  learnedWeights.cpp  learnedWeights.h  main.cpp  source.cpp
Bag/: Bag.cpp  Bag.h
Board/: Board.cpp  Board.h
Bstar/: Bstar.cpp  Bstar.h
Communication/: Communcation.cpp  Communcation.h
Dictionary/: GADDAG.cpp  GADDAG.h  bahi.txt  dictionary.cpp  dictionary.h  sowpods.txt
Heuristic/: Heuristic.cpp  Heuristic.h
Judge/: Judge.cpp  Judge.h
LearnedWeights/: LearnedWeights.cpp  LearnedWeights.h
Move/: Move.cpp  Move.h
Player/: Player.cpp  Player.h
Simulate/: simulate.cpp  simulate.h
SuperLeavesTrie/: SuperLeavesTrie.cpp  SuperLeavesTrie.h
